src/examples/valid/non-plot/while-return.ra
func test(): int {
  a = 1;
  while(a < 10) {
    print(a);
    a = a + 1;
  }
  return a;
}

func main(): void {
  print(test());
}
