src/examples/invalid/static/missing-return.ra
func test(): int {
  a = 1;
}

func main(): void {
  a = test();
  print(a);
}
